--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="WfD8IM6FzhiHBuDV4dMR5QABjLxHfuIPR7IMJl1zMG4" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=GTM-KG9CCSZK"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
