--- a/index.html
+++ b/index.html
@@ -33,16 +33,13 @@
     <link rel="stylesheet" href="./asset/css/app.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GTM-KG9CCSZK"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "GTM-KG9CCSZK");
-    </script>
+    <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-KG9CCSZK');</script>
+    <!-- End Google Tag Manager -->
     <meta name="google-site-verification" content="WfD8IM6FzhiHBuDV4dMR5QABjLxHfuIPR7IMJl1zMG4" />
 </head>
 
