--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       name="keywords"
       content="Sima njf, SimaNajafzadeh, Sima Najafzadeh Khoei, Sima Khoei, publication, project, statistical machine learning, biostattistics , data science"
     />
-    <meta property="og:image" content="/assets/images/profile.webp" />
+    <meta property="og:image" content="/asset/images/profile.webp" />
     <meta property="og:image:alt" content="Sima Najafzadeh Khoei" />
     <meta property="og:title" content="Sima Najafzadeh Khoei" />
     <meta property="og:url" content="https://sima-njf.github.io" />
