--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     My work spans statistical methods, epidemiology, and machine learning, where I strive to turn complex data into insights that make a tangible impact.
                 </p>
                 <p class="information-body-paragraphs-textarea">
-                    I’ve had the privilege of working under esteemed mentors like Dr. Daniel Scharfstein , Dr. Yue Zhang, and Dr. George Vega Yon, whose guidance has sharpened my technical abilities and deepened my respect for rigorous research.  I am energized by the process of uncovering insights within dense datasets, transforming numbers into actionable narratives that support better health outcomes.   
+                    I’ve had the privilege of working under esteemed mentors like <a href = "https://medicine.utah.edu/population-health-sciences/research/facultylabs/dscharf" target="blank" class="information-body-paragraphs-textarea-strong">Dr. Daniel Scharfstein</a> , <a href="https://medicine.utah.edu/faculty/yue-zhang" target="blank" class="information-body-paragraphs-textarea-strong">Dr. Yue Zhang</a>, and <a href="https://ggvy.cl/" target="blank" class="information-body-paragraphs-textarea-strong">Dr. George Vega Yon</a>, whose guidance has sharpened my technical abilities and deepened my respect for rigorous research.  I am energized by the process of uncovering insights within dense datasets, transforming numbers into actionable narratives that support better health outcomes.   
                 </p>
 
             </div>
