add activity page
+activity template
+activity form template
+activity action workflow

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <html lang="en">
     <meta name="robots" content="index, follow, max-image-preview:large" />
     <meta
       name="description"
-      content="Sima Najafzadeh khoei - My work spans statistical methods, epidemiology, and machine learning, where I strive to turn complex data into insights that make a tangible impact."
+      content="I am Sima Najafzadeh khoei - My work spans statistical methods, epidemiology, and machine learning, where I strive to turn complex data into insights that make a tangible impact."
     />
 
     <meta
@@ -19,6 +18,8 @@
     <meta property="og:image:alt" content="Sima Najafzadeh Khoei" />
     <meta property="og:title" content="Sima Najafzadeh Khoei" />
     <meta property="og:url" content="https://sima-njf.github.io" />
+    <meta property="og:description" content="I am Sima Najafzadeh khoei - My work spans statistical methods, epidemiology, and machine learning." />
+    <meta property="og:type" content="website" />
     <meta name="author" content="Sima Najafzadeh Khoei" />
     <meta name="publisher" content="Sima Najafzadeh Khoei" />
     <link rel="canonical" href="https://sima-njf.github.io" />
@@ -65,7 +66,7 @@
                     <a class = "header-container-a item-active" href"#">Home</a>  
                     <a class = "header-container-a" href="" download>Resume</a>  
                     <a class = "header-container-a" href="#">Projects</a>
-                    <a class = "header-container-a" href="#">Activity</a>
+                    <a class = "header-container-a" href="/pages/activity/activity.html">Activity</a>
                     <a class = "header-container-a" href="#">Publications</a> 
                 </div> 
                 <div class="social-icons">
@@ -211,8 +212,8 @@
        
     </div>
 
-    <script src="./index.js"></script>
-    <script src="./asset/js/switch.js"></script>
+    <script src="/index.js"></script>
+    <script src="/asset/js/switch.js"></script>
 </body>
 
 </html>
