--- a/pages/activity/activityform.html
+++ b/pages/activity/activityform.html
@@ -29,6 +29,8 @@
 
     <button class="activity-form-button" type="submit">Submit</button>
   </form>
+
+  <script src="/asset/js/activity/activityform.js"></script>
 </body>
 
 </html>
