--- a/pages/activity/activityform.html
+++ b/pages/activity/activityform.html
@@ -14,7 +14,7 @@
 
 <body>
   <h1>Submit a New Activity</h1>
-  <form class="activity-form" id="activity-form" onsubmit="return false;">
+  <form class="activity-form" id="activity-form">
     <label class="activity-form-label" for="image">Image URL:</label>
     <input class="activity-form-input" type="url" id="image" name="image" placeholder="Upload to Imgur and paste the URL here" required>
 
