update captcha code

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <input class = "contact-me-form-input" type="email" placeholder = "Your Email" name="email" required>
                             </div>
                             <textarea class = "contact-me-form-textare" name="message" placeholder = "Your Message" required></textarea>
-                            
+                            <input type="hidden" name="recaptcha_response" id="recaptchaResponse">
                             <button class = "contact-me-form-button" type="submit">Send</button>
                         </form>
                     </div>
