--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <form class = "contact-me-form" action="https://api.web3forms.com/submit" method="POST">
                         <strong class = "contact-me-form-strong">Get In Touch!</strong>
                         <input type="hidden" name="access_key"  value="55be92c5-3395-4070-9e90-a4b4e2d6275a">
-                        <input type="hidden" name="redirect" value="/pages/success.html">
+                        <input type="hidden" name="redirect" value="https://sima-njf.github.io/pages/success.html">
 
                         <div class = "contact-me-form-inputs">
                             <input class = "contact-me-form-input" type="text" name="name" placeholder = "Your Name" required>
