--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
                         <i class="fa-regular fa-sun sun-icon"></i>
                     </div>
                     <img class = "header-container-img" width ="200px" height="auto" src="./asset/images/profile.webp" alt="Profile Picture">
-                    <a class = "header-container-a item-active" href"#">Home</a>  
+                    <a class = "header-container-a item-active" href"/">Home</a>  
                     <a class = "header-container-a" href="" download>Resume</a>  
-                    <a class = "header-container-a" href="#">Projects</a>
-                    <a class = "header-container-a" href="/pages/activity/activity.html">Activity</a>
-                    <a class = "header-container-a" href="#">Publications</a> 
+                    <a class = "header-container-a" href="/pages/honors.html">Honors</a>
+                    <a class = "header-container-a" href="/pages/projects.html">Projects</a>
+                    <a class = "header-container-a" href="/pages/activity.html">Activity</a>
+                    <a class = "header-container-a" href="/pages/publications.html">Publications</a> 
                 </div> 
                 <div class="social-icons">
                     <a href="https://x.com/UofUBiostats" target="blank"><i class="fa-brands fa-x-twitter"></i></a>
@@ -101,16 +102,16 @@
             </div>
 
             <div class= "information-body-cards">
-                <div class= "information-body-card">
-                    <strong class= "information-body-card-strong">Publications</strong>
+                <a href="/pages/publications.html" class= "information-body-cards-aaa"><div class= "information-body-card">
+                    <strong  class= "information-body-card-strong">Publications</strong>
                     <div class= "information-body-card-img">
                         <img class = "" width ="50%" height="auto" src="./asset/images/publication.webp" alt="publication Picture">
                     </div>
                     <div class= "information-body-card-content">
                         <p>World of my research</p>
                     </div>
-                </div>
-                <div class= "information-body-card">
+                </div></a>
+                <a href="/pages/projects.html" class= "information-body-cards-aaa"><div class= "information-body-card">
                     <strong class= "information-body-card-strong">Projects</strong>
                     <div class= "information-body-card-img">
                         <img class = "" width ="50%" height="auto" src="./asset/images/project.webp" alt="publication Picture">
@@ -118,7 +119,7 @@
                     <div class= "information-body-card-content">
                         <p>Realm of my projects</p>
                     </div>
-                </div>
+                </div></a>
             </div>
 
             <div class = "picture-container-tabletmobile">
