--- a/pages/activity.html
+++ b/pages/activity.html
@@ -13,19 +13,19 @@
     <meta property="og:image" content="/asset/images/profile.webp" />
     <meta property="og:image:alt" content="Sima Najafzadeh Khoei Activities" />
     <meta property="og:title" content="Sima Najafzadeh Khoei Activities" />
-    <meta property="og:url" content="https://sima-njf.github.io/activity.html" />
+    <meta property="og:url" content="https://sima-njf.github.io/pages/activity.html" />
     <meta property="og:description" content="This page is dedicated to showcasing both my academic and non-academic activities." />
     <meta property="og:type" content="website" />
     <meta name="author" content="Sima Najafzadeh Khoei" />
     <meta name="publisher" content="Sima Najafzadeh Khoei" />
-    <link rel="canonical" href="https://sima-njf.github.io/activity.html" />
+    <link rel="canonical" href="https://sima-njf.github.io/pages/activity.html" />
     <link rel="icon" href="/avatar-ico.ico" type="image/x-icon">
     <link rel="icon" href="/fav-ico.png" type="image/png" sizes="32x32">
     <link rel="apple-touch-icon" href="/fav-ico.png">
 
     <title>Sima Khoei Activities</title>
     <link rel="stylesheet" href="/asset/css/app.css">
-    <link rel="stylesheet" href="/asset/css/activity/activity.css">
+    <link rel="stylesheet" href="/asset/css/activity.css">
     <link rel="stylesheet" href="/asset/css/pagesheader.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
 
@@ -51,13 +51,13 @@
           &#9776; 
         </div>
         <div class="activity-container-content-pagesheader-right-icons" id = "tab-side-menu">
-          <a class="activity-container-content-pagesheader-a" href="/index.html"><p>Projects</p></a>
+          <a class="activity-container-content-pagesheader-a" href="/pages/projects.html"><p>Projects</p></a>
           <div class="activity-container-content-pagesheader-a-cooldivider"></div>
-          <a class="activity-container-content-pagesheader-a " href="/index.html"><p class="header-active">Activities</p></a>
+          <a class="activity-container-content-pagesheader-a " href="/pages/activity.html"><p class="header-active">Activities</p></a>
           <div class="activity-container-content-pagesheader-a-cooldivider"></div>
-          <a class="activity-container-content-pagesheader-a" href="/index.html"><p>Publications</p></a>
+          <a class="activity-container-content-pagesheader-a" href="/pages/publications.html"><p>Publications</p></a>
           <div class="activity-container-content-pagesheader-a-cooldivider"></div>
-          <a class="activity-container-content-pagesheader-a" href="/index.html"><p>Honors</p></a>
+          <a class="activity-container-content-pagesheader-a" href="/pages/honors.html"><p>Honors</p></a>
         </div>
       </div>
       <h1 class = "activity-container-content-h1">Activity Timeline</h1>
@@ -90,16 +90,14 @@
                 </div>
             </div>
           </div>
-          <div class = "activity-container-content-holder-academic-container" id="activities-container">
-
-          </div>
+          <div class = "activity-container-content-holder-academic-container" id="activities-container"></div>
         </div>
       </div>
     </div>
   </div>
 
 
-  <script src="/asset/js/activity/activity.js"></script>
+  <script src="/asset/js/activity.js"></script>
   <script src="/index.js"></script>
 </body>
 
