--- a/pages/activity.html
+++ b/pages/activity.html
@@ -1,52 +1,124 @@
-const activities = [
-  {
-    title: "ENAR 2025 Spring Meeting (Attendee)",
-    category: "Academic",
-    date: "2025-03-23/2025-03-26",
-    place: "Sheraton New Orleans, LA",
-    img: "/asset/images/activity/enar-2025.jpg",
-    alt: "ENAR 2025 badge, March 23–26 in New Orleans",
-    blurb: "Attended the ENAR Spring Meeting focused on biostatistics and data science.",
-    link: "#"
-  },
-  {
-    title: "Teaching Assistant — Introduction to R",
-    category: "Academic",
-    date: "2025-07",
-    place: "",
-    img: "/asset/images/activity/intro-to-r.jpg",
-    alt: "TA for Introduction to R",
-    blurb: "TA for “Introduction to R,” taught by Dr. George Vega-Yon; supported lectures, labs, and mentoring.",
-    link: "#"
-  },
-  {
-    title: "Poster — Data Science Day, University of Utah",
-    category: "Academic",
-    date: "YYYY-MM-DD", // replace with exact date
-    place: "University of Utah",
-    img: "/asset/images/activity/utah-dsd.jpg",
-    alt: "Poster presentation at Data Science Day",
-    blurb: "Presented a research poster at Data Science Day highlighting ongoing work in population health/data science.",
-    link: "#"
-  },
-  {
-    title: "CDC MiND & HRre Program Meeting (Attendee)",
-    category: "Academic",
-    date: "2024-07-11/2024-07-12",
-    place: "Utah",
-    img: "/asset/images/activity/cdc-mind-hrre.jpg",
-    alt: "CDC MiND and HRre Program Meeting badge",
-    blurb: "Participated in the CDC MiND and HRre Program Meeting.",
-    link: "#"
-  },
-  {
-    title: "Delphi Data Science Initiative / Precision Health",
-    category: "Academic",
-    date: "YYYY-MM-DD", // replace
-    place: "",
-    img: "/asset/images/activity/delphi-precision-health.jpg",
-    alt: "Delphi Data Science Initiative badge",
-    blurb: "Participation related to data science in precision health (Population Health Sciences, PhD student).",
-    link: "#"
-  }
-];
+<!-- ENAR 2025 Spring Meeting -->
+<article class="activity-container-content-holder-academic-container-each flip-container">
+  <div class="activity-flipper">
+    <div class="activity-front">
+      <img class="activity-container-content-holder-academic-container-each-img lazy"
+           data-src="/asset/images/activity/enar-2025.jpg"
+           alt="ENAR 2025 badge, Sheraton New Orleans, March 23–26" loading="lazy" width="640" height="360">
+      <div class="activity-container-content-holder-academic-container-each-strongholder">
+        <strong class="activity-container-content-holder-academic-container-each-strong">
+          ENAR 2025 Spring Meeting (Attendee)
+        </strong>
+      </div>
+    </div>
+    <div class="activity-back">
+      <p class="activity-container-content-holder-academic-container-each-p">
+        Attended the ENAR Spring Meeting focused on biostatistics and data science.
+      </p>
+      <p class="activity-timestamp">Mar 23–26, 2025 • New Orleans, LA</p>
+      <p class="activity-container-content-holder-academic-container-each-pa">
+        <a class="activity-container-content-holder-academic-container-each-a" href="#" target="_blank" rel="noopener">Link</a>
+      </p>
+    </div>
+  </div>
+</article>
+
+<!-- TA: Introduction to R -->
+<article class="activity-container-content-holder-academic-container-each flip-container">
+  <div class="activity-flipper">
+    <div class="activity-front">
+      <img class="activity-container-content-holder-academic-container-each-img lazy"
+           data-src="/asset/images/activity/intro-to-r.jpg"
+           alt="Teaching assistant for Introduction to R" loading="lazy" width="640" height="360">
+      <div class="activity-container-content-holder-academic-container-each-strongholder">
+        <strong class="activity-container-content-holder-academic-container-each-strong">
+          Teaching Assistant — Introduction to R
+        </strong>
+      </div>
+    </div>
+    <div class="activity-back">
+      <p class="activity-container-content-holder-academic-container-each-p">
+        TA for “Introduction to R,” taught by Dr. George Vega-Yon; supported lectures, labs, and student mentoring.
+      </p>
+      <p class="activity-timestamp">July 2025</p>
+      <p class="activity-container-content-holder-academic-container-each-pa">
+        <a class="activity-container-content-holder-academic-container-each-a" href="#" target="_blank" rel="noopener">Syllabus/Details</a>
+      </p>
+    </div>
+  </div>
+</article>
+
+<!-- Poster: Data Science Day (University of Utah) -->
+<article class="activity-container-content-holder-academic-container-each flip-container">
+  <div class="activity-flipper">
+    <div class="activity-front">
+      <img class="activity-container-content-holder-academic-container-each-img lazy"
+           data-src="/asset/images/activity/utah-dsd.jpg"
+           alt="Poster presentation at University of Utah Data Science Day" loading="lazy" width="640" height="360">
+      <div class="activity-container-content-holder-academic-container-each-strongholder">
+        <strong class="activity-container-content-holder-academic-container-each-strong">
+          Poster — Data Science Day, University of Utah
+        </strong>
+      </div>
+    </div>
+    <div class="activity-back">
+      <p class="activity-container-content-holder-academic-container-each-p">
+        Presented a research poster at Data Science Day highlighting ongoing work in population health/data science.
+      </p>
+      <p class="activity-timestamp">Date: (add exact date)</p>
+      <p class="activity-container-content-holder-academic-container-each-pa">
+        <a class="activity-container-content-holder-academic-container-each-a" href="#" target="_blank" rel="noopener">Abstract/Poster</a>
+      </p>
+    </div>
+  </div>
+</article>
+
+<!-- CDC: MiND and HRre Program Meeting -->
+<article class="activity-container-content-holder-academic-container-each flip-container">
+  <div class="activity-flipper">
+    <div class="activity-front">
+      <img class="activity-container-content-holder-academic-container-each-img lazy"
+           data-src="/asset/images/activity/cdc-mind-hrre.jpg"
+           alt="CDC MiND and HRre Program Meeting attendee badge" loading="lazy" width="640" height="360">
+      <div class="activity-container-content-holder-academic-container-each-strongholder">
+        <strong class="activity-container-content-holder-academic-container-each-strong">
+          CDC MiND & HRre Program Meeting (Attendee)
+        </strong>
+      </div>
+    </div>
+    <div class="activity-back">
+      <p class="activity-container-content-holder-academic-container-each-p">
+        Participated in the CDC MiND and HRre Program Meeting.
+      </p>
+      <p class="activity-timestamp">July 11–12, 2024 • Utah</p>
+      <p class="activity-container-content-holder-academic-container-each-pa">
+        <a class="activity-container-content-holder-academic-container-each-a" href="#" target="_blank" rel="noopener">Event page</a>
+      </p>
+    </div>
+  </div>
+</article>
+
+<!-- Delphi Data Science Initiative / Precision Health -->
+<article class="activity-container-content-holder-academic-container-each flip-container">
+  <div class="activity-flipper">
+    <div class="activity-front">
+      <img class="activity-container-content-holder-academic-container-each-img lazy"
+           data-src="/asset/images/activity/delphi-precision-health.jpg"
+           alt="Delphi Data Science Initiative badge" loading="lazy" width="640" height="360">
+      <div class="activity-container-content-holder-academic-container-each-strongholder">
+        <strong class="activity-container-content-holder-academic-container-each-strong">
+          Delphi Data Science Initiative / Precision Health
+        </strong>
+      </div>
+    </div>
+    <div class="activity-back">
+      <p class="activity-container-content-holder-academic-container-each-p">
+        Participation related to data science in precision health (Population Health Sciences, PhD student).
+      </p>
+      <p class="activity-timestamp">Date: (add exact date)</p>
+      <p class="activity-container-content-holder-academic-container-each-pa">
+        <a class="activity-container-content-holder-academic-container-each-a" href="#" target="_blank" rel="noopener">Details</a>
+      </p>
+    </div>
+  </div>
+</article>
