--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index, follow, max-image-preview:large" />
     <meta
       name="description"
-      content="I am Sima Najafzadeh Khoei, a third-year Ph.D. student at the University of Utah, passionate about biostatistics and its role in advancing medicine and improving public health through rigorous data analysis. My research interests focus on causal machine learning and the application of machine learning methods in epidemiology.
+      content="I am Sima Najafzadeh Khoei - a third-year Ph.D. student at the University of Utah, passionate about biostatistics and its role in advancing medicine and improving public health through rigorous data analysis. My research interests focus on causal machine learning and the application of machine learning methods in epidemiology.
 
 I feel honored to be mentored by Dr. George Vega Yon, Dr. Bernardo Modensei, and Dr. Yue Zhang, whose guidance has greatly enriched my training and inspired my approach to research. I am excited to continue growing as a researcher and to contribute to meaningful work at the intersection of statistics, data science, and health outcomes.."
     />
