--- a/pages/honors.html
+++ b/pages/honors.html
@@ -1,85 +1,206 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index, follow, max-image-preview:large" />
-    <meta
-      name="description"
-      content="This page is dedicated to showcasing my honors."
-    />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow, max-image-preview:large" />
+  <meta
+    name="description"
+    content="Honors, awards, and selections for Sima Najafzadeh Khoei."
+  />
 
-    <meta name="keywords" content="Sima Najafzadeh Khoei, Sima Khoei, Academic honors" />
-    <meta property="og:image" content="/asset/images/profile.webp" />
-    <meta property="og:image:alt" content="Sima Najafzadeh Khoei honors" />
-    <meta property="og:title" content="Sima Najafzadeh Khoei honors" />
-    <meta property="og:url" content="https://sima-njf.github.io/pages/honors.html" />
-    <meta property="og:description" content="This page is dedicated to showcasing my honors." />
-    <meta property="og:type" content="website" />
-    <meta name="author" content="Sima Najafzadeh Khoei" />
-    <meta name="publisher" content="Sima Najafzadeh Khoei" />
-    <link rel="canonical" href="https://sima-njf.github.io/pages/honors.html" />
-    <link rel="icon" href="/avatar-ico.ico" type="image/x-icon">
-    <link rel="icon" href="/fav-ico.png" type="image/png" sizes="32x32">
-    <link rel="apple-touch-icon" href="/fav-ico.png">
+  <meta name="keywords" content="Sima Najafzadeh Khoei, Sima Khoei, Honors, Awards, Achievements" />
+  <meta property="og:image" content="/asset/images/profile.webp" />
+  <meta property="og:image:alt" content="Sima Najafzadeh Khoei Honors" />
+  <meta property="og:title" content="Sima Najafzadeh Khoei — Honors" />
+  <meta property="og:url" content="https://sima-njf.github.io/pages/honors.html" />
+  <meta property="og:description" content="Honors, awards, and selections for Sima Najafzadeh Khoei." />
+  <meta property="og:type" content="website" />
+  <meta name="author" content="Sima Najafzadeh Khoei" />
+  <meta name="publisher" content="Sima Najafzadeh Khoei" />
+  <link rel="canonical" href="https://sima-njf.github.io/pages/honors.html" />
+  <link rel="icon" href="/avatar-ico.ico" type="image/x-icon">
+  <link rel="icon" href="/fav-ico.png" type="image/png" sizes="32x32">
+  <link rel="apple-touch-icon" href="/fav-ico.png">
 
-    <title>Sima Khoei honors</title>
-    <link rel="stylesheet" href="/asset/css/app.css">
-    <link rel="stylesheet" href="/asset/css/honors.css">
-    <link rel="stylesheet" href="/asset/css/pagesheader.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+  <title>Sima Khoei — Honors</title>
+  <link rel="stylesheet" href="/asset/css/app.css">
+  <!-- keep existing page styles; reusing activity.css classes for cards/layout -->
+  <link rel="stylesheet" href="/asset/css/activity.css">
+  <link rel="stylesheet" href="/asset/css/pagesheader.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6DDEG362J3"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-6DDEG362J3');
-    </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6DDEG362J3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-6DDEG362J3');
+  </script>
 </head>
 
 <body>
-  <div class = "activity-container">
-    <div class = "activity-container-content">
+  <div class="activity-container">
+    <div class="activity-container-content">
       <div class="activity-container-content-pagesheader">
         <div class="activity-container-content-pagesheader-right-icon">
           <a class="activity-container-content-pagesheader-a" href="/index.html"><p>Home</p></a>
         </div>
         <div class="hamburger-menu" onclick="toggleMenu()">
-          &#9776; 
+          &#9776;
         </div>
-        <div class="activity-container-content-pagesheader-right-icons" id = "tab-side-menu">
-            <a class="activity-container-content-pagesheader-a" href="/pages/projects.html"><p>Projects</p></a>
-            <div class="activity-container-content-pagesheader-a-cooldivider"></div>
-            <a class="activity-container-content-pagesheader-a " href="/pages/activity.html"><p>Activities</p></a>
-            <div class="activity-container-content-pagesheader-a-cooldivider"></div>
-            <a class="activity-container-content-pagesheader-a" href="/pages/publications.html"><p>Publications</p></a>
-            <div class="activity-container-content-pagesheader-a-cooldivider"></div>
-            <a class="activity-container-content-pagesheader-a" href="/pages/honors.html"><p class="header-active">Honors</p></a>
+        <div class="activity-container-content-pagesheader-right-icons" id="tab-side-menu">
+          <a class="activity-container-content-pagesheader-a" href="/pages/projects.html"><p>Projects</p></a>
+          <div class="activity-container-content-pagesheader-a-cooldivider"></div>
+          <a class="activity-container-content-pagesheader-a" href="/pages/activity.html"><p>Activities</p></a>
+          <div class="activity-container-content-pagesheader-a-cooldivider"></div>
+          <a class="activity-container-content-pagesheader-a" href="/pages/publications.html"><p>Publications</p></a>
+          <div class="activity-container-content-pagesheader-a-cooldivider"></div>
+          <a class="activity-container-content-pagesheader-a" href="/pages/honors.html"><p class="header-active">Honors</p></a>
         </div>
       </div>
 
-      <h1 class = "honors-h1-view">Academic Honors</h1>
+      <h1 class="activity-container-content-h1">Honors &amp; Awards</h1>
 
-        <div class="filter-container">
-            <label for="year-filter">Filter by Year:</label>
-            <select id="year-filter">
-                <option value="all">Show All</option>
-            </select>
+      <div class="activity-container-content-holder">
+        <!-- removed filters to keep page focused on honors -->
+        <div class="activity-container-content-holder-academic">
+          <h2 class="activity-container-content-holder-academic-h2">Selected Honors (2020–2025)</h2>
+
+          <!-- Card template kept for consistent styling -->
+          <div class="activity-container-content-holder-academic-container" id="honors-container">
+
+            <!-- ENAR Oral Presentation -->
+            <div class="activity-container-content-holder-academic-container-each flip-container">
+              <div class="activity-flipper">
+                <div class="activity-front">
+                  <img class="activity-container-content-holder-academic-container-each-img" src="/asset/images/honors/enar.jpg" alt="ENAR Spring Meeting">
+                  <div class="activity-container-content-holder-academic-container-each-strongholder">
+                    <strong class="activity-container-content-holder-academic-container-each-strong">
+                      ENAR Spring Meeting — Oral Presentation
+                    </strong>
+                  </div>
+                </div>
+                <div class="activity-back">
+                  <p class="activity-container-content-holder-academic-container-each-p">
+                    “Automatic Calibration of Agent-Based Models using Deep Neural Networks.”
+                  </p>
+                  <p class="activity-timestamp">March 26, 2025 — New Orleans, LA</p>
+                  <!-- optional link -->
+                  <!-- <p class="activity-container-content-holder-academic-container-each-pa"><a class="activity-container-content-holder-academic-container-each-a" target="_blank" href="#">Program</a></p> -->
+                </div>
+              </div>
+            </div>
+
+            <!-- JSM 2025 Selections -->
+            <div class="activity-container-content-holder-academic-container-each flip-container">
+              <div class="activity-flipper">
+                <div class="activity-front">
+                  <img class="activity-container-content-holder-academic-container-each-img" src="/asset/images/honors/jsm.jpg" alt="JSM 2025">
+                  <div class="activity-container-content-holder-academic-container-each-strongholder">
+                    <strong class="activity-container-content-holder-academic-container-each-strong">
+                      JSM 2025 — Oral &amp; Poster Selections
+                    </strong>
+                  </div>
+                </div>
+                <div class="activity-back">
+                  <p class="activity-container-content-holder-academic-container-each-p">
+                    Competitive selection for oral and poster presentations (unable to attend).
+                  </p>
+                  <p class="activity-timestamp">August 2025 — Nashville, TN</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- DELPHI DSI Poster -->
+            <div class="activity-container-content-holder-academic-container-each flip-container">
+              <div class="activity-flipper">
+                <div class="activity-front">
+                  <img class="activity-container-content-holder-academic-container-each-img" src="/asset/images/honors/delphi.jpg" alt="DELPHI Data Science Initiative">
+                  <div class="activity-container-content-holder-academic-container-each-strongholder">
+                    <strong class="activity-container-content-holder-academic-container-each-strong">
+                      DELPHI Data Science Initiative — Poster
+                    </strong>
+                  </div>
+                </div>
+                <div class="activity-back">
+                  <p class="activity-container-content-holder-academic-container-each-p">
+                    “Automatic Calibration of Agent-Based Models using Deep Neural Networks.”
+                  </p>
+                  <p class="activity-timestamp">January 2025</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- CDC Oral Presentation -->
+            <div class="activity-container-content-holder-academic-container-each flip-container">
+              <div class="activity-flipper">
+                <div class="activity-front">
+                  <img class="activity-container-content-holder-academic-container-each-img" src="/asset/images/honors/cdc.jpg" alt="Centers for Disease Control and Prevention">
+                  <div class="activity-container-content-holder-academic-container-each-strongholder">
+                    <strong class="activity-container-content-holder-academic-container-each-strong">
+                      CDC — Oral Presentation
+                    </strong>
+                  </div>
+                </div>
+                <div class="activity-back">
+                  <p class="activity-container-content-holder-academic-container-each-p">
+                    “Comparing the Performance of Different R<sub>t</sub> Estimations: Insights from an Agent-Based Network Model Study.”
+                  </p>
+                  <p class="activity-timestamp">July 11–12, 2024 — Atlanta, GA</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Fully Funded PhD -->
+            <div class="activity-container-content-holder-academic-container-each flip-container">
+              <div class="activity-flipper">
+                <div class="activity-front">
+                  <img class="activity-container-content-holder-academic-container-each-img" src="/asset/images/honors/uofu.jpg" alt="University of Utah">
+                  <div class="activity-container-content-holder-academic-container-each-strongholder">
+                    <strong class="activity-container-content-holder-academic-container-each-strong">
+                      Fully Funded Ph.D. Position — Biostatistics
+                    </strong>
+                  </div>
+                </div>
+                <div class="activity-back">
+                  <p class="activity-container-content-holder-academic-container-each-p">
+                    Awarded fully funded Ph.D. position in Biostatistics at the University of Utah.
+                  </p>
+                  <p class="activity-timestamp">2023 — Salt Lake City, UT</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Ranked First, B.A. -->
+            <div class="activity-container-content-holder-academic-container-each flip-container">
+              <div class="activity-flipper">
+                <div class="activity-front">
+                  <img class="activity-container-content-holder-academic-container-each-img" src="/asset/images/honors/tehran.jpg" alt="University of Tehran">
+                  <div class="activity-container-content-holder-academic-container-each-strongholder">
+                    <strong class="activity-container-content-holder-academic-container-each-strong">
+                      Ranked First — B.A. in Statistics
+                    </strong>
+                  </div>
+                </div>
+                <div class="activity-back">
+                  <p class="activity-container-content-holder-academic-container-each-p">
+                    Ranked first in the Bachelor’s program at the University of Tehran.
+                  </p>
+                  <p class="activity-timestamp">2020 — Tehran, Iran</p>
+                </div>
+              </div>
+            </div>
+
+          </div> <!-- /honors-container -->
         </div>
-
-        <div  id="honors-container"></div>
-
-
+      </div>
     </div>
   </div>
 
-
-  <script src="/asset/js/honors.js"></script>
+  <!-- removed /asset/js/activity.js since this page is static; keeps global index.js -->
   <script src="/index.js"></script>
 </body>
-
-
 </html>
