--- a/pages/activity.html
+++ b/pages/activity.html
@@ -60,7 +60,13 @@
           <a class="activity-container-content-pagesheader-a" href="/pages/honors.html"><p>Honors</p></a>
         </div>
       </div>
+
       <h1 class = "activity-container-content-h1">Activity Timeline</h1>
+
+      <!-- NEW: brief note about hobbies -->
+      <p style="margin: 0 12px 18px 12px;">
+        Outside of research, I enjoy <strong>hiking</strong> and <strong>skiing</strong>.
+      </p>
 
       <div class = "activity-container-content-holder">
         <div class = "activity-container-content-holder-filter">
@@ -69,6 +75,8 @@
           <p class = "activity-container-content-holder-filter-p">Academic</p>
           <p class = "activity-container-content-holder-filter-p">Non-academic</p>
         </div>
+
+        <!-- Academic -->
         <div class = "activity-container-content-holder-academic">
           <h2 class = "activity-container-content-holder-academic-h2">Academic Activities:</h2>
           
@@ -92,14 +100,57 @@
           </div>
           <div class = "activity-container-content-holder-academic-container" id="activities-container"></div>
         </div>
+
+        <!-- NEW: Non-academic -->
+        <div class = "activity-container-content-holder-academic">
+          <h2 class = "activity-container-content-holder-academic-h2">Non-academic Activities:</h2>
+
+          <div class="activity-container-content-holder-academic-container" id="non-activities-container">
+            <!-- Hiking card -->
+            <div class="activity-container-content-holder-academic-container-each flip-container" data-category="Non-academic">
+              <div class="activity-flipper">
+                <div class="activity-front">
+                  <img class="activity-container-content-holder-academic-container-each-img lazy" data-src="/asset/images/activity/non_hiking.jpg" alt="Hiking">
+                  <div class="activity-container-content-holder-academic-container-each-strongholder">
+                    <strong class="activity-container-content-holder-academic-container-each-strong">Hiking</strong>
+                  </div>
+                </div>
+                <div class="activity-back">
+                  <p class="activity-container-content-holder-academic-container-each-p">
+                    Exploring trails around the Wasatch and Uinta ranges.
+                  </p>
+                  <p class="activity-timestamp">Ongoing</p>
+                  <!-- Optional link; keep or remove -->
+                  <!-- <p class="activity-container-content-holder-academic-container-each-pa"><a class="activity-container-content-holder-academic-container-each-a" target="blank" href="https://www.alltrails.com/us/utah">Link</a></p> -->
+                </div>
+              </div>
+            </div>
+
+            <!-- Skiing card -->
+            <div class="activity-container-content-holder-academic-container-each flip-container" data-category="Non-academic">
+              <div class="activity-flipper">
+                <div class="activity-front">
+                  <img class="activity-container-content-holder-academic-container-each-img lazy" data-src="/asset/images/activity/non_skiing.jpg" alt="Skiing">
+                  <div class="activity-container-content-holder-academic-container-each-strongholder">
+                    <strong class="activity-container-content-holder-academic-container-each-strong">Skiing</strong>
+                  </div>
+                </div>
+                <div class="activity-back">
+                  <p class="activity-container-content-holder-academic-container-each-p">
+                    Winter weekends on the slopes; local favorites include Alta and Brighton.
+                  </p>
+                  <p class="activity-timestamp">Ongoing</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /Non-academic -->
       </div>
     </div>
   </div>
 
-
   <script src="/asset/js/activity.js"></script>
   <script src="/index.js"></script>
 </body>
-
-
-</html> 
+</html>
